# Practice-Slambook14

./: README.md
Book14/ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
Book14/ch11/: CMakeLists.txt  feature_training.cpp  loop_closure.cpp
Book14/ch2/: CMakeLists.txt
Book14/ch2/include/: lib_hello_slam.h
Book14/ch2/src/: hello_slam.cpp  lib_hello_slam.cpp  use_hello.cpp
Book14/ch3/: CMakeLists.txt
Book14/ch3/src/examples/: CMakeLists.txt  coordinate_transform.cpp  plot_trajectory.cpp
Book14/ch3/src/use_eigen/: CMakeLists.txt  eigen_matrix.cpp
Book14/ch3/src/use_geometry/: CMakeLists.txt  eigen_geometry.cpp
Book14/ch4/: CMakeLists.txt  use_sophus.cpp
Book14/ch4/example/: CMakeLists.txt  trajectory_error.cpp
Book14/ch5/: CMakeLists.txt
Book14/ch5/src/image_basics/: CMakeLists.txt  image_basics.cpp  undistort_image.cpp
Book14/ch5/src/rgbd/: CMakeLists.txt  join_map.cpp
Book14/ch5/src/stereo_vision/: CMakeLists.txt  stereo_vision.cpp
Book14/ch6/: CMakeLists.txt  ceres_curve_fitting.cpp  g2o_curve_fitting.cpp  gauss_newton.cpp
Book14/ch7/: CMakeLists.txt  orb_cv.cpp  orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d3d.cpp  triangulation.cpp
Book14/ch8/: direct_method.cpp  optical_flow.cpp
Book14/ch9/: CMakeLists.txt
Book14/ch9/src/: bundle_adjustment_ceres.cpp  bundle_adjustment_g2o.cpp
